Сделала приветственный блок

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
 <body>
 
 <ul class="menu" id="menu"></ul>
+<div class = "container-hello">
+<h1>Добро пожаловать!</h1>
+<h1>Нажмите на правую кнопку мыши, чтобы выбрать действие</h1>
+</div>
 
 </body>
 </html>
